--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "main": false
   },
   "scripts": {
-    "build": "parcel build index.html",
-    "dev": "yarn postbuild && parcel index.html",
+    "build": "rimraf dist && parcel build index.html",
+    "dev": "rimraf dist && yarn postbuild && parcel index.html",
     "postbuild": "mkdir dist\\static && cp -r static dist"
   },
   "dependencies": {
@@ -18,6 +18,7 @@
     "@babel/plugin-proposal-decorators": "^7.10.5",
     "parcel": "^2.0.0-nightly.376",
     "parcel-plugin-static-files-copy": "^2.5.0",
+    "rimraf": "^3.0.2",
     "sass": "^1.26.10"
   }
 }
