--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "main": false
   },
   "scripts": {
-    "build": "rimraf dist && parcel build index.html",
-    "dev": "rimraf dist && yarn postbuild && parcel index.html",
-    "postbuild": "mkdir dist\\static && cp -r static dist",
+    "build": "snowpack build",
+    "dev": "snowpack dev",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -17,18 +16,13 @@
     "lit-element": "^2.4.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.4",
+    "@babel/plugin-proposal-class-properties": "^7.10.4",
     "@babel/plugin-proposal-decorators": "^7.10.5",
-    "@storybook/addon-actions": "^6.0.16",
-    "@storybook/addon-essentials": "^6.0.16",
-    "@storybook/addon-links": "^6.0.16",
-    "@storybook/web-components": "^6.0.16",
-    "babel-loader": "^8.1.0",
-    "lit-html": "^1.3.0",
-    "parcel": "^2.0.0-nightly.376",
-    "parcel-plugin-static-files-copy": "^2.5.0",
-    "react-is": "^16.13.1",
-    "rimraf": "^3.0.2",
-    "sass": "^1.26.10"
+    "@snowpack/app-scripts-lit-element": "^1.8.4",
+    "@storybook/addon-actions": "^6.0.19",
+    "@storybook/addon-essentials": "^6.0.19",
+    "@storybook/addon-links": "^6.0.19",
+    "@storybook/web-components": "^6.0.19",
+    "snowpack": "^2.9.0"
   }
 }
